# wp-tasks

./: .flake8  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
src/wp_tasks/: cli.py  types.py
src/wp_tasks/core/: api_client.py  url.py  wp_tasks_runner.py
src/wp_tasks/dsl/: __init__.py  get_posts.py
src/wp_tasks/dsl/ast/: __init__.py  draft_redirect_pages.py
src/wp_tasks/dsl/plugins/: redirection.py
src/wp_tasks/tasks/: redirect_conferences.py
